# Pythonized-Bag-of-Visual-Words

./: Bag_of_Visual_Words.py  EdgeSamplingNV.py  ExtractSIFTFeatures.py  ImageProcessor.py  LICENSE  ProcessingConfig.py  README.md  discrete_sampler.py  main.py  pyproject.toml  vgg_xcv_out  vgg_xcv_segment.m  vgg_xcv_segment.py
Workspace/: interest_point.npy  scale.npy  score.npy  x.npy  y.npy
Workspace/Codebook/: Codebook.npy
Workspace/Quantized_vector_descriptors/: Testing_vq_descriptors.npy  Training_vq_descriptors.npy
